--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "post-install-cmd": [
+            "chmod -R 777 public/"
         ]
     },
     "extra": {
